Amended CSS and added some fonts

--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weight Converter App</title>
+    <title>Simple Weight Converter App</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ruwudu&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h2>Weight Converter</h2>
+        <h2>Weight Converter App</h2>
         <div class="input-wrapper">
-            <label for="kg">Kilogram:</label>
+            <label for="kg">Kilograms:</label>
             <input type="number" id="kg" value="10" />
         </div>
         <div class="input-wrapper">
