Removed the place holding value for kg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Weight Converter App</h2>
         <div class="input-wrapper">
             <label for="kg">Kilograms:</label>
-            <input type="number" id="kg" value="10" />
+            <input type="number" id="kg" />
         </div>
         <div class="input-wrapper">
             <label for="lb">Pounds:</label>
